libs/wingc/src/lsp/snapshots/completions/static_completions_after_expression.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: deepCopy
  kind: 2
  detail: "(json: MutJson): Json"
  documentation:
    kind: markdown
    value: "```wing\nstatic deepCopy: (json: MutJson): Json\n```\n---\nCreates an immutable deep copy of the Json.\n\n\n### Returns\nthe immutable copy of the Json"
  sortText: ff|deepCopy
  insertText: deepCopy($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: deepCopyMut
  kind: 2
  detail: "(json: Json): MutJson"
  documentation:
    kind: markdown
    value: "```wing\nstatic deepCopyMut: (json: Json): MutJson\n```\n---\nCreates a mutable deep copy of the Json.\n\n\n### Returns\nthe mutable copy of the Json"
  sortText: ff|deepCopyMut
  insertText: deepCopyMut($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: delete
  kind: 2
  detail: "(json: MutJson, key: str): void"
  documentation:
    kind: markdown
    value: "```wing\nstatic delete: (json: MutJson, key: str): void\n```\n---\nDeletes a key in a given Json."
  sortText: ff|delete
  insertText: delete($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: entries
  kind: 2
  detail: "(json: Json): Array<Json>"
  documentation:
    kind: markdown
    value: "```wing\nstatic entries: (json: Json): Array<Json>\n```\n---\nReturns the entries from the Json.\n\n\n### Returns\nthe entries as Array<Json> consisting of enumerable [key, value] pairs"
  sortText: ff|entries
  insertText: entries($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: has
  kind: 2
  detail: "(json: Json, key: str): bool"
  documentation:
    kind: markdown
    value: "```wing\nstatic has: (json: Json, key: str): bool\n```\n---\nChecks if a Json object has a given key.\n\n\n### Returns\nBoolean value corresponding to whether the key exists"
  sortText: ff|has
  insertText: has($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: keys
  kind: 2
  detail: "(json: any): Array<str>"
  documentation:
    kind: markdown
    value: "```wing\nstatic keys: (json: any): Array<str>\n```\n---\nReturns the keys from the Json.\n\n\n### Returns\nthe keys as Array<String>"
  sortText: ff|keys
  insertText: keys($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: parse
  kind: 2
  detail: "(str: str): Json"
  documentation:
    kind: markdown
    value: "```wing\nstatic parse: (str: str): Json\n```\n---\nParse a string into a Json.\n\n\n### Returns\nJson representation of the string"
  sortText: ff|parse
  insertText: parse($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: stringify
  kind: 2
  detail: "(json: any, options: JsonStringifyOptions?): str"
  documentation:
    kind: markdown
    value: "```wing\nstatic stringify: (json: any, options: JsonStringifyOptions?): str\n```\n---\nFormats Json as string.\n\n\n### Returns\nstring representation of the Json"
  sortText: ff|stringify
  insertText: stringify($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: tryParse
  kind: 2
  detail: "(str: str?): Json?"
  documentation:
    kind: markdown
    value: "```wing\nstatic tryParse: (str: str?): Json?\n```\n---\nTry to parse a string into a Json.\n\n\n### Returns\nJson representation of the string or undefined if string is not parsable"
  sortText: ff|tryParse
  insertText: tryParse($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: values
  kind: 2
  detail: "(json: Json): Array<Json>"
  documentation:
    kind: markdown
    value: "```wing\nstatic values: (json: Json): Array<Json>\n```\n---\nReturns the values from the Json.\n\n\n### Returns\nthe values as Array<Json>"
  sortText: ff|values
  insertText: values($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints

