libs/wingc/src/lsp/snapshots/completions/static_json_after_expression_statement.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: deepCopy
  kind: 2
  detail: "(json: MutJson): Json"
  documentation:
    kind: markdown
    value: "```wing\nstatic deepCopy: (json: MutJson): Json\n```\n---\nCreates an immutable deep copy of the Json.\n\n\n### Returns\nthe immutable copy of the Json"
  sortText: ff|deepCopy
  insertText: deepCopy($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: deepCopyMut
  kind: 2
  detail: "(json: Json): MutJson"
  documentation:
    kind: markdown
    value: "```wing\nstatic deepCopyMut: (json: Json): MutJson\n```\n---\nCreates a mutable deep copy of the Json.\n\n\n### Returns\nthe mutable copy of the Json"
  sortText: ff|deepCopyMut
  insertText: deepCopyMut($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: delete
  kind: 2
  detail: "(json: MutJson, key: str): void"
  documentation:
    kind: markdown
    value: "```wing\nstatic delete: (json: MutJson, key: str): void\n```\n---\nDeletes a key in a given Json."
  sortText: ff|delete
  insertText: delete($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: has
  kind: 2
  detail: "(json: Json, key: str): bool"
  documentation:
    kind: markdown
    value: "```wing\nstatic has: (json: Json, key: str): bool\n```\n---\nChecks if a Json object has a given key.\n\n\n### Returns\nBoolean value corresponding to whether the key exists"
  sortText: ff|has
  insertText: has($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: isEquals
  kind: 2
  detail: "(jsonA: Json, jsonB: Json): bool"
  documentation:
    kind: markdown
    value: "```wing\nstatic isEquals: (jsonA: Json, jsonB: Json): bool\n```\n---\nA recursive deep comparison of two Json objects to determine if they are equal.\n\n\n### Returns\nBoolean value corresponding if the Json objects are equal"
  sortText: ff|isEquals
  insertText: isEquals($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: keys
  kind: 2
  detail: "(json: any): Array<str>"
  documentation:
    kind: markdown
    value: "```wing\nstatic keys: (json: any): Array<str>\n```\n---\nReturns the keys from the Json object.\n\n\n### Returns\nthe keys from the Json object as string array"
  sortText: ff|keys
  insertText: keys($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: parse
  kind: 2
  detail: "(str: str): Json"
  documentation:
    kind: markdown
    value: "```wing\nstatic parse: (str: str): Json\n```\n---\nParse a string into a Json.\n\n\n### Returns\nJson representation of the string"
  sortText: ff|parse
  insertText: parse($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: stringify
  kind: 2
  detail: "(json: any, indent: num?): str"
  documentation:
    kind: markdown
    value: "```wing\nstatic stringify: (json: any, indent: num?): str\n```\n---\nFormats Json as string.\n\n\n### Returns\nstring representation of the Json\n\n### Remarks\n(JSON.stringify($args$))"
  sortText: ff|stringify
  insertText: stringify($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: tryParse
  kind: 2
  detail: "(str: str?): Json?"
  documentation:
    kind: markdown
    value: "```wing\nstatic tryParse: (str: str?): Json?\n```\n---\nTry to parse a string into a Json.\n\n\n### Returns\nJson representation of the string or undefined if string is not parsable"
  sortText: ff|tryParse
  insertText: tryParse($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: values
  kind: 2
  detail: "(json: Json): Array<Json>"
  documentation:
    kind: markdown
    value: "```wing\nstatic values: (json: Json): Array<Json>\n```\n---\nReturns the values from the Json.\n\n\n### Returns\nthe values from the Json as array of Json"
  sortText: ff|values
  insertText: values($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints

