libs/wingc/src/lsp/snapshots/completions/struct_definition_types.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: Foo
  kind: 22
  documentation:
    kind: markdown
    value: "```wing\nstruct Foo\n```\n---"
  sortText: hh|Foo
- label: cloud
  kind: 9
  documentation:
    kind: markdown
    value: "Module `cloud`"
  sortText: kk|cloud

