libs/wingc/src/lsp/snapshots/completions/struct_literal_all.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: "x:"
  kind: 5
  detail: str
  documentation:
    kind: markdown
    value: "```wing\nx: str\n```"
  sortText: "ab|x:"
  insertText: "x: $1"
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: "y:"
  kind: 5
  detail: num
  documentation:
    kind: markdown
    value: "```wing\ny: num\n```"
  sortText: "ab|y:"
  insertText: "y: $1"
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest

