libs/wingc/src/lsp/snapshots/completions/struct_literal_unused.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: "y:"
  kind: 5
  detail: num
  documentation:
    kind: markdown
    value: "```wing\ny: num\n```"
  sortText: "ab|y:"
  insertText: "y: $1,"
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest

