libs/wingc/src/lsp/snapshots/completions/struct_show_values.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: x
  kind: 6
  detail: num
  documentation:
    kind: markdown
    value: "```wing\npreflight x: num\n```"
  sortText: bb|x
- label: unsafeCast
  kind: 3
  detail: "(value: any): any"
  documentation:
    kind: markdown
    value: "```wing\nunsafeCast: (value: any): any\n```\n---\nCasts a value into a different type. This is unsafe and can cause runtime errors\n### Parameters\n- `value` — `any` — The value to cast into a different type"
  sortText: cc|unsafeCast
  insertText: unsafeCast($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: S
  kind: 22
  documentation:
    kind: markdown
    value: "```wing\nstruct S\n```\n---\n### Fields\n- `a` — `num`\n- `b` — `num`"
  sortText: hh|S
- label: "inflight () => {}"
  kind: 15
  sortText: "ll|inflight () => {}"
  filterText: inflight
  insertText: "inflight ($1) => {$2}"
  insertTextFormat: 2

