libs/wingc/src/lsp/snapshots/completions/type_annotation_shows_struct.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: Foo
  kind: 22
  documentation:
    kind: markdown
    value: "```wing\nFoo\n```\n---"
  sortText: hh|Foo

