libs/wingc/src/lsp/snapshots/completions/type_parameter.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: Json
  kind: 14
  sortText: kl|zyJson
- label: MutJson
  kind: 14
  sortText: kl|zyMutJson
- label: bool
  kind: 14
  sortText: kl|zybool
- label: duration
  kind: 14
  sortText: kl|zyduration
- label: num
  kind: 14
  sortText: kl|zynum
- label: str
  kind: 14
  sortText: kl|zystr
- label: Array<T>
  kind: 14
  sortText: kl|zzArray
  insertText: Array<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: Map<T>
  kind: 14
  sortText: kl|zzMap
  insertText: Map<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: MutArray<T>
  kind: 14
  sortText: kl|zzMutArray
  insertText: MutArray<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: MutMap<T>
  kind: 14
  sortText: kl|zzMutMap
  insertText: MutMap<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: MutSet<T>
  kind: 14
  sortText: kl|zzMutSet
  insertText: MutSet<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: Set<T>
  kind: 14
  sortText: kl|zzSet
  insertText: Set<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest

